# blog

./: .env.template  .flake8  .gitignore  README.md  pyproject.toml
core/blog/: admin.py  middleware.py  models.py  signals.py  urls.py  views.py
core/blog/middleware/: monitoring_middleware.py
core/core/: settings.py  urls.py
core/static/blog/css/: blog.css
core/templates/blog/: base.html
core/templates/blog/post/: comment.html  detail.html  list.html
