[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Zaks Danil <zaksdanil1913@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
black = "^24.4.2"
pre-commit = "^3.7.1"
python-dotenv = "^1.0.1"
django-taggit = "^5.0.1"
markdown = "^3.6"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
